%% QForge database schema after M6 — RAG (retrieval-augmented generation)
%% NEW in M6: CONTENT_CHUNKS — the retrieval corpus: units.content and subjects.syllabus
%% split into retrievable pieces (unit_id null = subject-level syllabus chunk). Derived
%% data, wholesale-replaced on re-chunk; nothing foreign-keys into it. Each row's vector
%% twin lives in Qdrant (infrastructure, not schema) under the row id — rebuildable via
%% `artisan qforge:rag:reindex`. See docs/RAG-GUIDE.md.
erDiagram
    USERS ||--o{ BLUEPRINTS : owns
    USERS ||--o{ PAPERS : owns
    USERS ||--o{ DOCUMENT_UPLOADS : uploads
    SUBJECTS ||--o{ UNITS : "has"
    SUBJECTS ||--o{ QUESTIONS : "scopes"
    SUBJECTS ||--o{ BLUEPRINTS : "targets"
    SUBJECTS ||--o{ PAPERS : "for"
    SUBJECTS ||--o{ DOCUMENT_UPLOADS : "for"
    SUBJECTS ||--o{ CONTENT_CHUNKS : "chunked into"
    UNITS ||--o{ QUESTIONS : "groups (primary)"
    UNITS ||--o{ PAPER_QUESTIONS : "tags"
    UNITS ||--o{ CONTENT_CHUNKS : "chunked into (nullable)"
    QUESTIONS ||--o{ QUESTION_UNIT : "tagged"
    UNITS ||--o{ QUESTION_UNIT : "tags"
    BLUEPRINTS ||--o{ PAPERS : "generates"
    PAPERS ||--o{ PAPER_QUESTIONS : "contains"
    QUESTIONS ||--o{ PAPER_QUESTIONS : "appears in"

    USERS {
        bigint id PK
        enum role "teacher|admin"
    }
    SUBJECTS {
        bigint id PK
        string code UK
    }
    UNITS {
        bigint id PK
        bigint subject_id FK
    }
    QUESTIONS {
        bigint id PK
        bigint subject_id FK
        bigint unit_id FK "primary unit"
        enum source "extracted|ai|manual"
        enum status "pending|approved|rejected"
    }
    QUESTION_UNIT {
        bigint question_id FK
        bigint unit_id FK "all tagged units, primary included"
    }
    CONTENT_CHUNKS {
        bigint id PK "Qdrant point id"
        bigint subject_id FK
        bigint unit_id FK "null = syllabus chunk"
        smallint position "reading order"
        string heading "context path"
        text text
    }
    BLUEPRINTS {
        bigint id PK
        bigint owner_id FK
        bigint subject_id FK
    }
    PAPERS {
        bigint id PK
        bigint owner_id FK
        bigint blueprint_id FK
        bigint subject_id FK
    }
    PAPER_QUESTIONS {
        bigint id PK
        bigint paper_id FK
        bigint question_id FK
        bigint unit_id FK
    }
    DOCUMENT_UPLOADS {
        bigint id PK
        bigint uploader_id FK
        bigint subject_id FK
        enum type "syllabus|past_paper"
        enum status "uploaded|processing|parsed|failed"
    }
